第17章初步润色完毕

--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
@@ -1,95 +1,190 @@
 # 17.幼儿园的苦难
 
-## 17.1 Benefits of daycare
+## 17 Daycare misery
+
+## 幼儿园的苦难
+
+### 17.1 Benefits of daycare
+
+### 幼儿园的益处
 
 For many parents daycare is unavoidable. Daycare facilities keep improving. They use better science and better practices. They keep learning. Therefore, I do not want anyone to feel bad about my text. Things get better. But I agree with pre-Trump version of Mike Pence: **Kids in daycare get a short end of the stick**. Even the best and most professional daycare won't effectively replace a good mother. It is very hard to find good information about the true effect of daycare because there is a whole industry who powers daycare and a whole army of moms who want to be free from child care.
 
+对许多父母来说，幼儿园是不可避免的选择。幼儿园设施日益完善。他们使用更好的科学方法，进行更好的实践操作。随着时代进步不断学习新知。因此，我不希望任何人对我接下来所说的感到难过。毕竟幼儿园日益精进。而对于特朗普当选前版的 Mike Pence，我也表示同意：**幼儿园里的孩子们得到的待遇并不公正**。即使是最好、最专业的幼儿园机构也无法有效地取代一位好母亲。很难说能找到可信的信息说明幼儿园真的有好的效果，毕竟这是一个庞大的产业，而且有一大批母亲想从看护儿童中解放出来。
+
 Excellent daycare employees swear by their methodology and benefits. They claim that kids still benefit. This often comes from contacts with parents whose knowledge and skills may not be up to the par of what can be provided by professionals. However, if you read this text and ponder your options, you are qualified enough: **keep your child with you!**
 
-## 17.2 Social pressure
+优秀的幼儿园教师坚信他们的教育方式和福利制度。那些知识和技能可能达不到专业水平的父母却仍然声称他们的孩子从幼儿园所中受益良多。然而，如果你读了这篇文章并仔细考虑了你的选择，你就算得上一名合格的家长了：**最好与您的孩子在一起！**
 
-There is a social pressure to send kids to daycare. Many a mom observes proudly the acceleration in development. A kid, that was mute or totally dependent, starts naming things, communicating, or putting on one's T-shirt. This is great for [mom's sense of guilt](https://supermemo.guru/wiki/Moms_feel_guilty_about_daycare): "_Mummy goes to work to earn money for the baby. You go girl and learn!_". The same mom feels even better if it tells stay-at-home mom "_send your kids to kindergarten, this will do miracles to their social skill development, don't keep them just cooped up at home!_".
+### 17.2 Social pressure
 
-## 17.3 Problem of daycare
+### 社会压力
 
-Daycare is an artificially constructed environment that violates many conditions needed for unconstrained development. The main violations occur in the areas of stress and sleep. Those violations affect the brain and all parents should be aware that "_kindergarten acceleration_" is a dangerous myth. [Kids do accelerate into a groove of long-term stagnation](https://supermemo.guru/wiki/Learning_acceleration_via_stress). Good news today may be bad news in a decade. Daycare has been [linked with an increase in aggressive behaviors and other behavioral problems](https://supermemo.guru/wiki/Childcare_predicts_socioemotional_problems). This short text explains why.
+There is a social pressure to send kids to daycare. Many a mom observes proudly the acceleration in development. A kid, that was mute or totally dependent, starts naming things, communicating, or putting on one's T-shirt. This is great for [mom's sense of guilt](https://supermemo.guru/wiki/Moms_feel_guilty_about_daycare): "*Mummy goes to work to earn money for the baby. You go girl and learn!*". The same mom feels even better if it tells stay-at-home mom "*send your kids to kindergarten, this will do miracles to their social skill development, don't keep them just cooped up at home!*".
 
-### 17.3.1 Problem 1: Sleep hygiene
+把孩子送到幼儿园所是社会压力导致父母做出的选择。许多母亲自豪地发现孩子成长的加速。一个起初沉默或完全依赖别人的孩子，开始学会说名字，开始与他人交流，或者自己穿上t恤。这对母亲从[自责感](https://supermemo.guru/wiki/Moms_feel_guilty_about_daycare)中解脱有所帮助：「*妈妈上班挣钱给孩子。你去与其他女孩玩耍和学习！*」如果它告诉全职妈妈「*把孩子送去幼儿园，这会对他们的社交技能发展产生奇迹，不要把他们关在家里！*」，那么那些全职妈妈会更愿意将孩子们送进托儿所
+
+### 17.3 Problem of daycare
+
+### 幼儿园的问题
+
+Daycare is an artificially constructed environment that violates many conditions needed for unconstrained development. The main violations occur in the areas of stress and sleep. Those violations affect the brain and all parents should be aware that "*kindergarten acceleration*" is a dangerous myth. [Kids do accelerate into a groove of long-term stagnation](https://supermemo.guru/wiki/Learning_acceleration_via_stress). Good news today may be bad news in a decade. Daycare has been [linked with an increase in aggressive behaviors and other behavioral problems](https://supermemo.guru/wiki/Childcare_predicts_socioemotional_problems). This short text explains why.
+
+幼儿园是一种人为营造的环境，它违反了自由发展所需要的许多条件。主要的侵犯发生在压力和睡眠方面。这些违规行为会影响大脑，所有家长都应该意识到，「*幼儿园加速教育*」是一个错误观念。[孩子确实会加速进入长期停滞的状态](https://supermemo.guru/wiki/Learning_acceleration_via_stress)。今天的好消息可能在十年后变成坏消息。[幼儿园导致攻击性行为和其他行为问题的增加](https://supermemo.guru/wiki/childcare_predicts_socialemotional_problems)。下面这篇短文解释了原因。
+
+#### 17.3.1 Problem 1: Sleep hygiene
+
+#### 问题 1：睡眠环境
 
 **Most kids need to be woken up for daycare. This is a major violation of brain hygiene**. For kids who wake up naturally, there is no issue. Chronotherapy can help, but few parents know how to use it. The cheapest and obvious solution is a gentle waking prod from a parent. Being gentle is better than being abrupt, but it still has an awful impact on health and brain growth. The violation of waking kids up is most critical in the first 3 years of development. Sending kids sleepy to daycare begins a vicious spiral of negative health consequences. For an unlucky kid, those tend to pile up from month to month stunting growth and undermining long term outcomes.
 
-### 17.3.2 Problem 2: Child stress
+大多数孩子需要被叫醒去幼儿园。这严重违反了大脑的睡眠状况。对于那些自然醒的孩子来说，没有什么问题。时间疗法能有所帮助，但很少有家长知道如何使用它。最简单、最明显的解决办法是父母温柔地叫醒孩子。温柔总比唐突好，但它对健康和大脑发育仍有可怕的影响。在孩子成长的头 3 年里，让他们睡眠充足是最关键的。把困倦的孩子送到幼儿园将开始对健康不利的恶性循环。对于一个不幸的孩子来说，这些问题往往一个月接一个月地堆积起来，阻碍成长，长期导致破坏性结果。
+
+#### 17.3.2 Problem 2: Child stress
+
+#### 问题 2：儿童压力
 
 **In most cases, daycare involves child stress. Chronic stress is a prime factor in stunting brain growth.** For a tiny kid, the first day in daycare is almost inevitably stressful. If the kid goes to daycare all smiles, this is usually not an issue either. The largest stress component is [maternal separation](https://supermemo.guru/wiki/Behavioral_effects_of_maternal_separation_and_early_weaning). Research shows that it has a powerful impact on little brains. There is a host of procedures that can make sure that kids accept maternal separation as a norm. In the end, most kids do. However, the chief mechanism used in that procedure is [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive). In short, when kids are left with no choice, they stop combating the status quo. It happens to all humans in conditions of limited freedom.
 
-### 17.3.3 Vicious circle: positive feedback loop
+**在大多数情况下，幼儿园会增加儿童的压力。慢性压力是阻碍大脑发育的主要因素。**对于一个小朋友来说，在幼儿园的第一天几乎不可避免地会有压力。如果孩子带着微笑去托儿所，这通常也不是问题。最大的压力因素是[与母亲分离](https://supermemo.guru/wiki/behavioral_effects_of_maternal_separation _and_early_weaning)。研究表明，它对小朋友的大脑有很大的影响。有许多做法可以确保孩子们接受与母亲分离就像成为惯例。最终，大多数孩子都会这么做。然而，该过程中使用的主要机制是[习得性无助](https://supermemo.guru/wiki/learned_helpessness_vs._learn_drive)。简而言之，当孩子们别无选择时，他们就会停止与现状作斗争。所有人都会发生这件事情，当自己的自由受到限制。
+
+#### 17.3.3 Vicious circle: positive feedback loop
+
+#### 恶性循环：正反馈循环
 
 Sending kids out to daycare sleepy and stressed begins the vicious circle of health consequences: slower development, lower immunity, [infections](https://supermemo.guru/wiki/Daycare_infections), antibiotics, missed days, more stress, more sleep deprivation, etc. That vicious circle may have societal dimensions.
 
-## 17.4 Physiological acceleration
+把孩子们送去幼儿园，让他们感到困倦和压力，开始了健康后果的恶性循环：发育迟缓、免疫力下降、[感染](https://supermemo.guru/wiki/daycare_)、抗生素、缺勤、更多的压力、更多的睡眠剥夺，等等。这种恶性循环可能具有社会层面的影响。
+
+### 17.4 Physiological acceleration
+
+### 生理阶段进展
 
 Weaning is a natural process than may take 2-5 years. Many moms choose not to breastfeed. They do it at child's peril. Others wean early. Daycare may be used as an excuse for early weaning. This is one more reason to delay or avoid daycare. A child may seem to accept weaning. In many cases this will happen via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive).
 
+断奶是一个自然的过程，可能需要 2 - 5 年的时间。许多妈妈选择不母乳喂养。他们这样做是冒着一定的风险的。特别当看见别人早断奶的时候。幼儿园可以作为早期断奶的借口。这也是推迟或避免幼儿园的另一个原因。孩子似乎可以接受断奶。在许多情况下，这将通过[习得性无助](https://supermemo.guru/wiki/learned_helpessness_vs._learn_drive)发生。
+
 If the kid is still breastfed, it will use mom's breast as a form of anti-stress therapy. This is a natural biological need. If the kids needs breastfeeding, it should be granted. This is not an entitlement or pandering. This is a basic baby human right. While the kid is breastfed, the daycare should be out of the question. Even if the kid wakes up naturally, and loves daycare, it may still experience the stress of separation at feeding or nap time.
 
-[Weaning in hunter-gatherer societies may happen at the age of 4](https://supermemo.guru/wiki/Hunter-gatherer_childhood), often at next pregnancy. In those cultures, co-sleeping is a natural habit. Our culture forces early weaning and recommends just a meager 6 months of breastfeeding as the "necessary minimum". [Co-sleeping is considered "dangerous" and is actively eradicated by governmental agencies](https://supermemo.guru/wiki/Risks_of_co-sleeping). Moms claim that weaning is a result of "_mutual consent_", while this should always be a unilateral decision. Moms who tried "natural weaning" report that breastfeeding easily lasts beyond 3 years, and is reduced only minimally in the absence of breast milk. This is the type of bonding that should never be interfered with!
+如果孩子仍然是母乳喂养，它将使用妈妈的乳房作为一种形式的抗压力治疗。这是一种自然的生理需要。如果孩子需要母乳喂养，就应该给予。这不是一种权利或迎合。这是婴儿的一项基本人权。孩子是母乳喂养的，幼儿园是不可能提供的。即使孩子是自然醒的，喜欢幼儿园，但在喂食或午睡时间，他仍可能感受到与母亲分离的压力。
+
+[Weaning in hunter-gatherer societies may happen at the age of 4](https://supermemo.guru/wiki/Hunter-gatherer_childhood), often at next pregnancy. In those cultures, co-sleeping is a natural habit. Our culture forces early weaning and recommends just a meager 6 months of breastfeeding as the "necessary minimum". [Co-sleeping is considered "dangerous" and is actively eradicated by governmental agencies](https://supermemo.guru/wiki/Risks_of_co-sleeping). Moms claim that weaning is a result of "*mutual consent*", while this should always be a unilateral decision. Moms who tried "natural weaning" report that breastfeeding easily lasts beyond 3 years, and is reduced only minimally in the absence of breast milk. This is the type of bonding that should never be interfered with!
+
+在原始捕猎社会，[断奶可能发生在 4 岁](https://supermemo.guru/wiki/hun-collecer_childhood)，通常是在母亲下一次怀孕时。在这些文化中，母亲与孩子同睡是一种自然的习惯。我们的文化迫使我们尽早断奶，并建议只进行 6 个月的母乳喂养作为「必要的最低限度」。而与孩子同睡是不利的，[政府机构正在积极根除这种现象](https://supermemo.guru/wiki/risks_of_co -sleep)。妈妈们声称断奶是「*双方同意*」的结果，而这却是一个单方面的决定。尝试过「自然断奶」的母亲报告说，母乳喂养很容易持续超过 3 年，而且在没有母乳的情况下，母乳喂养的减少幅度最小。这是一种永远不应该被干涉的关系!
 
 In addition to **maternal separation**, social issues and **bullying**, kids may experience kindergarten stress simply due to their otherness.
 
+除了**与母亲分离**、社会问题和**欺凌**外，孩子们可能会因为他们的差异性而感受到幼儿园的压力。
+
 Imagine a 3 year old that refuses to **remove its diaper**. In some kindergartens it is a good reason to get the supervisor circle the kids around, make them point fingers, and collectively **ridicule the "offender"**. Some kids don't care. Others will feel awful. For some kids, self-esteem is a key factor in happiness. Ridicule is a big factor when it comes to hating kindergarten.
+
+想象一下，一个 3 岁的孩子拒绝**脱掉尿布**。在一些幼儿园，让主管把孩子们围成一圈，让他们指手画脚，集体**嘲笑「冒犯者」**，这是一个很好的理由。有些孩子不在乎。其他人会感觉很糟糕。对一些孩子来说，自尊是幸福的关键因素。当谈到讨厌幼儿园时，被嘲笑是一个很大的因素。
 
 A kid may have a habit of sucking a thumb before a nap. He may be self-aware enough to make it hard to nap at all. No thumb, no nap. In the presence of the primary caregiver, all those little habits do not matter. They are part of the routine. Home feels home. In a new setting, they can be a source of stress.
 
+孩子可能有在午睡前吮拇指的习惯。他可能有足够的自知之明，以至于根本无法小睡。没有拇指，就没有午睡。在主要照顾者面前，所有这些小习惯都无关紧要。他们是例行公事的一部分。回家的感觉。在一个新的环境中，它们可能是压力的来源。
+
 Parents can always take preventive action. Potty training would transfer kindergarten stress back to lesser home stress and make it possible to spread it over time. Thumb sucking can also be de-conditioned.
+
+父母总是可以采取预防措施。如厕训练可以将幼儿园的压力转移回较小的家庭压力，并使其有可能随着时间的推移而扩散。吮吸大拇指也可以放松。
 
 The problem is that all those training procedures detract from natural development. All kids will stop breastfeeding at some point. They learn to use the toilet. They stop sucking thumbs. It all comes naturally. They do it of their own accord. Those skills do not need to be accelerated.
 
+问题是所有这些训练程序都有损于自然发展。所有的孩子都会在某个时候停止母乳喂养。他们学习自己上厕所。他们不再吮大拇指。一切都是自然而然的。他们是自愿做这件事的。这些技能不需要加快。
+
 **Potty training is stressful** to both kids and parents. It is a stress that coincides and interferes with a vital physiological processes: urination and defecation. This type of conditioning is asking for trouble. For some kids, it will all go smoothly and fast. For others, it can leave a long-term mark. There is a very simple solution: wait until the kid is ready. If it takes 3 years, so be it. If you worry that diapers are environmental polluters, you can always use reusable diapers or even more eco-friendly solutions.
+
+对孩子和父母来说，**如厕训练都很有压力**。它是一种压力，与重要的生理过程（排尿和排便）同时发生并相互干扰。这种条件作用是自找麻烦。对一些孩子来说，一切都会顺利而快速地进行。对其他人来说，这可能会留下一个长期的印记。有一个非常简单的解决办法：等到孩子准备好了。如果需要 3 年，那就这样吧。如果你担心尿布会污染环境，你可以使用可重复使用的尿布，甚至是更环保的解决方案。
 
 Most of all, why waste time on potty training? The same time might be spent on reading a book, or whatever pursuit the kid enjoys.
 
+最重要的是，为什么要把时间浪费在如厕训练上？同样的时间可以用来读书，或者做孩子喜欢做的任何事情。
+
 So many potty-training books, so many stressed kids and parents, so many time outs dished out, and so much time invested in a thing that will always come naturally and free.
+
+有那么多关于上厕所的书，那么多压力重重的孩子和家长，那么多的休息时间，那么多的时间投入到一件自然而又免费的事情上。
 
 For all kids, **all form of "physiological acceleration" should be avoided** or approached with utmost caution.
 
-## 17.5 Daycare: The verdict
+对于所有的孩子来说，**所有形式的「过度加快生理进展」都应该避免**或极其谨慎地被对待。
+
+### 17.5 Daycare: The verdict
+
+### 幼儿园：判决
 
 Nearly all parents who send kids to daycare will look for excuses. [Kindergarten acceleration](https://supermemo.guru/wiki/How_baby_brain_does_not_work) is an illusion. The supposed benefits of infections are largely [a myth](https://supermemo.guru/wiki/Daycare_infections). The benefits of socialization can be accomplished [differently and better](https://supermemo.guru/wiki/Optimal_socialization). If reasonable home care can be provided, daycare should be avoided.
 
+几乎所有送孩子去托儿所的父母都会找借口。[幼儿园对成长的加快](https://supermemo.guru/wiki/How_baby_brain_does_not_work)是一种幻觉。所谓感受到的益处在很大程度上是[错误的观念](https://supermemo.guru/wiki/daycare_)。社会化的好处可以[以不同且更好的方式](https://supermemo.guru/wiki/optimal_社会化)实现。如果能提供合理的家庭护理，家长应避免幼儿园。
+
 **No daycare can ever compete with good parenting!**
 
-## 17.6 Feminist perspective
+**没有哪所幼儿园所能与良好的教育竞争!**
 
-During one of my child development conversations, a young mom politely but unhesitantly called me a "male chauvinist pig": "_with all your views on breastfeeding and co-sleeping, where is the room for a woman? If you care so much about the planet, imagine that I may work on saving the world at the tiny cost of inconveniencing my child? I cannot afford going to work brain dead, just because of some negligible benefit to child's health from co-sleeping_".
+### 17.6 Feminist perspective
+
+### 女权主义视角
+
+During one of my child development conversations, a young mom politely but unhesitantly called me a "male chauvinist pig": "*with all your views on breastfeeding and co-sleeping, where is the room for a woman? If you care so much about the planet, imagine that I may work on saving the world at the tiny cost of inconveniencing my child? I cannot afford going to work brain dead, just because of some negligible benefit to child's health from co-sleeping*".
+
+在我与孩子成长的一次谈话中，一位年轻的母亲礼貌而毫不犹豫地称我为「大男子主义的蠢蛋」：「*你对母乳喂养和与人同睡有那么多看法，女人的空间在哪里？如果你这么关心这个星球，想象一下，我可以用给我的孩子带来不便的小小代价来拯救这个世界吗？我不能因为与孩子同睡对孩子的健康有一些微不足道的好处，就去做脑死亡的工作*」。
 
 I totally agree that there is a trade-off. My sturdy attitude only comes from two factors:
 
 1. my work in the field of memory tells me those health effects of co-sleeping or breastfeeding are huge, not just negligible, and
 2. I see kids as carrying a compound interest.
 
+我完全同意这是有代价的。我坚定的态度只有两个原因：
+
+1. 我在记忆领域的工作告诉我，共眠或母乳喂养对健康的影响是巨大的，而不仅仅是微不足道的
+2. 我认为孩子们可以得到回报。
+
 This is why I might be a bit unhappy with "mommy blog propaganda" extolling the relief from breastfeeding or child care or shunting the baby to a separate room so that to revive the sex life.
+
+这就是为什么我可能会对「妈咪博客宣传」有点不高兴，它赞美母乳喂养或儿童护理的缓解，或者把婴儿转移到一个单独的房间，以恢复性生活。
 
 What a parent can accomplish today, the kid may accomplish better, by an order of magnitude, in a generation. The starting value of the capital is far beyond negligible. The balance after three decades can turn out astronomic.
 
-## 17.7 Summary: Daycare misery
+如今父母所能做到的，孩子们在一代人的时间里可能会比现在做得好一个数量级。资本的初始价值远远不能忽略。三十年后的余额就会变成天文数字。
 
-* daycare is an inferior substitute of good parenting
-* in western societies, there is a social pressure to send kids to daycare
-* to a large extent, social pressure originates in self-exculpatory mindset of young career-oriented parents
-* peer pressure in favor of daycare is based on a series of myths about the biology of child development
-* daycare acceleration is often a short-term phenomenon with poorer long-term outcomes
-* daycare acceleration works only for kids from families characterized by low resources \(incl. time\), neglect, pathology, and/or poor education
-* daycare boost to immunity is a myth
-* daycare socialization is often [negative](https://en.wikipedia.org/wiki/Socialization#Negative_socialization)
-* daycare results in an increase in aggression and other behavioral problems
-* for many kids, daycare begins too early and necessitates forceful waking
-* for most kids, daycare violates [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle)
-* for most kids, esp. young kids, or early in the process, daycare involves significant stress
-* for small kids, maternal separation is bad for the brain
-* kids suffering from chronic daycare stress are likely to experience inferior long-term brain development
-* [weaning](https://en.wikipedia.org/wiki/Weaning) should be natural and may take up to 4 years. In particular, it should not be accelerated for the sake of daycare
-* [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) of daycare increases the likelihood of depression in adulthood
-* daycare often produces a positive feedback loop: slower development, lower immunity, infections, antibiotics, missed days, more stress, more sleep deprivation, etc.
-* potty-training is a waste of time, and can involve unnecessary stress
-* all forms of physiological and developmental acceleration make sense only if they are child-driven, i.e. natural
+### 17.7 Summary: Daycare misery
 
+### 摘要：幼儿园的痛苦
+
+- daycare is an inferior substitute of good parenting
+- 幼儿园是良好教育的次等替代品
+- in western societies, there is a social pressure to send kids to daycare
+- 在西方社会，把孩子送到幼儿园所是一种社会压力
+- to a large extent, social pressure originates in self-exculpatory mindset of young career-oriented parents
+- 社会压力在很大程度上源于年轻的事业型父母自我辩解的心态
+- peer pressure in favor of daycare is based on a series of myths about the biology of child development
+- 支持幼儿园的同辈压力是基于一系列关于儿童生长发育学的错误观念
+- daycare acceleration is often a short-term phenomenon with poorer long-term outcomes
+- 幼儿园加速通常是短期现象，长期效果较差
+- daycare acceleration works only for kids from families characterized by low resources (incl. time), neglect, pathology, and/or poor education
+- 幼儿园加速只适用于来自资源（包括时间）、忽视、病理和/或教育水平低的家庭的孩子
+- daycare boost to immunity is a myth
+- 幼儿园提高免疫力是一个错误观念
+- daycare socialization is often [negative](https://en.wikipedia.org/wiki/Socialization#Negative_socialization)
+- 幼儿园社会化经常是[消极的](https://en.wikipedia.org/wiki/社会化# negative ative_社会化)
+- daycare results in an increase in aggression and other behavioral problems
+- 幼儿园会导致攻击性和其他行为问题的增加
+- for many kids, daycare begins too early and necessitates forceful waking
+- 对很多孩子来说，幼儿园开始得太早，需要强行醒来
+- for most kids, daycare violates [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle)
+- 对大多数孩子来说，幼儿园违反了[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)
+- for most kids, esp. young kids, or early in the process, daycare involves significant stress
+- 对大多数孩子来说，尤其是年幼的孩子，或者在这个过程的早期，幼儿园会带来很大的压力
+- for small kids, maternal separation is bad for the brain
+- 对小孩子来说，与母亲分离对大脑有害
+- kids suffering from chronic daycare stress are likely to experience inferior long-term brain development
+- 患有慢性幼儿园压力的儿童可能会经历较差的长期大脑发育
+- [weaning](https://en.wikipedia.org/wiki/Weaning) should be natural and may take up to 4 years. In particular, it should not be accelerated for the sake of daycare
+- [断奶](https://en.wikipedia.org/wiki/断奶)应该是自然的，可能需要长达 4 年的时间。尤其是，它不应该因为幼儿园而被提前
+- [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) of daycare increases the likelihood of depression in adulthood
+- 在幼儿园的[习得性无助](https://supermemo.guru/wiki/learned_无助)会增加成年期抑郁的可能性
+- daycare often produces a positive feedback loop: slower development, lower immunity, infections, antibiotics, missed days, more stress, more sleep deprivation, etc.
+- 幼儿园经常产生一个正反馈循环：发育迟缓、免疫力下降、感染、抗生素、缺勤、更大的压力、更少的睡眠等等。
+- potty-training is a waste of time, and can involve unnecessary stress
+- 如厕训练是浪费时间，而且可能带来不必要的压力
+- all forms of physiological and developmental acceleration make sense only if they are child-driven, i.e. natural
+- 所有形式的生理和发育加速只有在儿童自身驱动下才有意义，即自然
