--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
@@ -116,9 +116,9 @@ Nearly all parents who send kids to daycare will look for excuses. [Kindergarten
 
 几乎所有送孩子去托儿所的父母都会找借口。[幼儿园对成长的加快](https://supermemo.guru/wiki/How_baby_brain_does_not_work)是一种幻觉。所谓感受到的益处在很大程度上是[错误的观念](https://supermemo.guru/wiki/daycare_)。社会化的好处可以[以不同且更好的方式](https://supermemo.guru/wiki/optimal_社会化)实现。如果能提供合理的家庭护理，家长应避免幼儿园。
 
-**No daycare can ever compete with good parenting!**
-
-**没有哪所幼儿园所能与良好的教育竞争!**
+> **No daycare can ever compete with good parenting!**
+>
+> **没有哪所幼儿园所能与良好的养育竞争！**
 
 ### 17.6 Feminist perspective
 
