--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
@@ -38,7 +38,7 @@ Daycare is an artificially constructed environment that violates many conditions
 
 **Most kids need to be woken up for daycare. This is a major violation of brain hygiene**. For kids who wake up naturally, there is no issue. Chronotherapy can help, but few parents know how to use it. The cheapest and obvious solution is a gentle waking prod from a parent. Being gentle is better than being abrupt, but it still has an awful impact on health and brain growth. The violation of waking kids up is most critical in the first 3 years of development. Sending kids sleepy to daycare begins a vicious spiral of negative health consequences. For an unlucky kid, those tend to pile up from month to month stunting growth and undermining long term outcomes.
 
-大多数孩子需要被叫醒去幼儿园。这严重违反了大脑的睡眠状况。对于那些自然醒的孩子来说，没有什么问题。时间疗法能有所帮助，但很少有家长知道如何使用它。最简单、最明显的解决办法是父母温柔地叫醒孩子。温柔总比唐突好，但它对健康和大脑发育仍有可怕的影响。在孩子成长的头 3 年里，让他们睡眠充足是最关键的。把困倦的孩子送到幼儿园将开始对健康不利的恶性循环。对于一个不幸的孩子来说，这些问题往往一个月接一个月地堆积起来，阻碍成长，长期导致破坏性结果。
+**大多数孩子需要被叫醒去幼儿园。这严重违反了大脑的睡眠健康**。对于那些自然醒的孩子来说，没有什么问题。时间疗法能有所帮助，但很少有家长知道如何使用它。最简单、最明显的解决办法是父母温柔地叫醒孩子。温柔总比唐突好，但它对健康和大脑发育仍有可怕的影响。在孩子成长的头 3 年里，让他们睡眠充足是最关键的。把困倦的孩子送到幼儿园将开始对健康不利的恶性循环。对于一个不幸的孩子来说，这些问题往往一个月接一个月地堆积起来，阻碍成长，长期导致破坏性结果。
 
 #### 17.3.2 Problem 2: Child stress
 
