--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/15.how-baby-brain-does-not-work-ying-er-de-da-nao-zen-yang-bu-qi-zuo-yong.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/15.how-baby-brain-does-not-work-ying-er-de-da-nao-zen-yang-bu-qi-zuo-yong.md
@@ -106,7 +106,7 @@ The major lesson and warning for all parents is that we do not want to use stres
 
 ### 15.6Precocious genius
 
-### 早熟和压力
+### 早熟的天才
 
 We are marvelling at Mozart composing his first pieces at the age of 2. Why can't our kids do that? Perhaps some early classes in piano or violin can help? Wait! Wikipedia says Mozart started composing at 3? That's one year more. Perhaps that tablet app will make a difference? Perhaps we can double that piano time and she can still do it? Then we hear on ABC News that Mozart rather started composing at 4? The actual age at which Mozart produced his first simple compositions might actually be 5. That's still mighty impressive. His incredible start might have come from a combination of precocity and the impact of his father. A perfect storm of smarts and ideal upbringing. For all hopeful parents, the message should be clear: great parenting makes a world of difference. However, no parent should impose a timeline on achievement. If it does not come at 5, it might come at 7, and it might come better. Acceleration cannot come with the use of a whip. Slow growing brains may grow further.
 
@@ -149,7 +149,7 @@ Very often the explanation may be simpler and not that optimistic. The explanati
 >
 > **早期加速的人可能会提前达到巅峰**
 
-[![Kids who bloom late may bloom better](https://github.com/L-M-Sherlock/supermemo.guru-cn/tree/6f9ffec88c650c833975cf3119997cdf61aa4443/I%20would%20never%20send%20my%20kids%20to%20school我永远不会送我的孩子去学校/15.How%20baby%20brain%20does%20not%20work婴儿的大脑怎样不起作用.assets/500px-Precocity_paradox.png)](https://supermemo.guru/wiki/File:Precocity_paradox.png)
+![Kids who bloom late may bloom better](15.how-baby-brain-does-not-work-ying-er-de-da-nao-zen-yang-bu-qi-zuo-yong.assets/500px-Precocity_paradox.png)
 
 > **Figure: Precocity paradox** explains why early acceleration may also result in an early stagnation. Slow and rich brain growth will prolong a set of unwelcome side effects of neurogenesis such as childhood amnesia. This may lead to an illusion that early academic training improves long-term developmental prospects. In reality, early acceleration may be a result of the crystallizing effect of stress on the brain structures. Kids who bloom late may bloom better. The best way to assist a healthy brain development is freedom and access to rich environments
 >
@@ -169,7 +169,7 @@ Africa's early success is a good metaphor for brain development in education. Ac
 
 ### 15.9 Summary: baby brain problems
 
-### 摘要：宝宝大脑问题
+### 摘要：婴儿大脑的问题
 
 * children have a very bad long-term memory
 * 孩子的长期记忆非常糟糕
