--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/17.daycare-misery-you-er-yuan-de-ku-nan.md
@@ -34,7 +34,7 @@ Daycare is an artificially constructed environment that violates many conditions
 
 #### 17.3.1 Problem 1: Sleep hygiene
 
-#### 问题 1：睡眠环境
+#### 问题一：睡眠健康
 
 **Most kids need to be woken up for daycare. This is a major violation of brain hygiene**. For kids who wake up naturally, there is no issue. Chronotherapy can help, but few parents know how to use it. The cheapest and obvious solution is a gentle waking prod from a parent. Being gentle is better than being abrupt, but it still has an awful impact on health and brain growth. The violation of waking kids up is most critical in the first 3 years of development. Sending kids sleepy to daycare begins a vicious spiral of negative health consequences. For an unlucky kid, those tend to pile up from month to month stunting growth and undermining long term outcomes.
 
@@ -42,7 +42,7 @@ Daycare is an artificially constructed environment that violates many conditions
 
 #### 17.3.2 Problem 2: Child stress
 
-#### 问题 2：儿童压力
+#### 问题二：儿童压力
 
 **In most cases, daycare involves child stress. Chronic stress is a prime factor in stunting brain growth.** For a tiny kid, the first day in daycare is almost inevitably stressful. If the kid goes to daycare all smiles, this is usually not an issue either. The largest stress component is [maternal separation](https://supermemo.guru/wiki/Behavioral_effects_of_maternal_separation_and_early_weaning). Research shows that it has a powerful impact on little brains. There is a host of procedures that can make sure that kids accept maternal separation as a norm. In the end, most kids do. However, the chief mechanism used in that procedure is [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive). In short, when kids are left with no choice, they stop combating the status quo. It happens to all humans in conditions of limited freedom.
 
@@ -58,7 +58,7 @@ Sending kids out to daycare sleepy and stressed begins the vicious circle of hea
 
 ### 17.4 Physiological acceleration
 
-### 生理阶段进展
+### 生理上的加速
 
 Weaning is a natural process than may take 2-5 years. Many moms choose not to breastfeed. They do it at child's peril. Others wean early. Daycare may be used as an excuse for early weaning. This is one more reason to delay or avoid daycare. A child may seem to accept weaning. In many cases this will happen via [learned helplessness](https://supermemo.guru/wiki/Learned_helplessness_vs._learn_drive).
 
@@ -148,7 +148,7 @@ What a parent can accomplish today, the kid may accomplish better, by an order o
 
 ### 17.7 Summary: Daycare misery
 
-### 摘要：幼儿园的痛苦
+### 摘要：幼儿园的苦难
 
 - daycare is an inferior substitute of good parenting
 - 幼儿园是良好教育的次等替代品
