--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/18.stress-resilience-ya-li-shi-ying-li.md
@@ -118,19 +118,19 @@ The opposite is true. Freedom is a better way to shape a better future character
 
 #### 18.5.2 Discipline training
 
-#### 纪律训练
+#### 自律训练
 
 Preparation for adulthood is not only about stress resilience. Many educators claim that kids who suffer no discipline won't be able to adapt to a job that requires a submission. This is false. All animals follow an instinctive drive for freedom. This drive has evolutionary benefits. Captured deer will struggle to the point of injury. Restrained puppy will yelp for freedom of space. Human mind that grows free from shackles will retain the quest for open spaces and freedom till the very end of life. For a healthy brain, there is very little difficulty in achieving self-restraint and self-discipline through reason. Limits on freedom in childhood may generate stress that may limit brain development that, later in life, paradoxically, will make it harder to impose self-discipline. On the other side of the equation, freedom fosters creativity, which is an equally priced possession. You do not need to be an employer to know that it is far easier for a creative individual to self-impose restraint than for a well-disciplined soldier to [become creative on demand](https://supermemo.guru/wiki/Creativity:_abundant_but_suppressed!). Preparation for adulthood needs to take into account the immaturity of the brain. Taking on a hard 9-5 job may be easy for a high-IQ thirty-year-old. The same job may be highly stressful for a teen, bad for health for a 10-year-old, or a plain brain destroyer for a 5-year-old. We should celebrate the fact that we no longer need to send 8 year olds to handle a factory assembly line to earn a living.
 
-为成年做准备不仅仅是为了应对压力。许多教育工作者声称，没有纪律的孩子将无法适应将来的工作。这么说是错误的。所有的动物都本能地追求自由。这种驱动力具有进化上的好处。被捕获的鹿会挣扎到受伤的程度。被约束的小狗会为自由的空间狂吠。从枷锁中解放出来的人之心灵，将会保留对开放空间和自由的追求，直到生命的尽头。对于一个健康的大脑来说，通过理性来实现自我约束和自律是非常容易的。童年时期对自由的限制可能会产生压力，这可能会限制大脑的发育，而在以后的生活中，矛盾的是，这将使自律变得更加困难。在等式的一边，自由促进创造力，而创造力是一种同等价值的财产。你不需要成为一名雇主就能知道，一个有创造力的人自我约束要比一个纪律严明的士兵[根据需要变得有创造力](https://supermemo.guru/wiki/Creativity:_abundant_but_suppressed!)容易得多。为成年做准备需要考虑到大脑的不成熟。对于一个高智商的 30 岁的人来说，从事朝九晚五的工作可能很容易。同样的工作对一个十几岁的孩子来说可能是非常有压力的，对一个 10 岁的孩子来说可能是有害健康的，或者对一个 5 岁的孩子来说可能是一个完全的大脑破坏。我们应该庆祝这样一个事实，我们不再需要送8岁的孩子去工厂流水线上工作来为我们自己谋生。
+为成年做准备不仅仅是为了应对压力。许多教育工作者声称，没有自律的孩子将无法适应将来的工作。这么说是错误的。所有的动物都本能地追求自由。这种驱动力具有进化上的好处。被捕获的鹿会挣扎到受伤的程度。被约束的小狗会为自由的空间狂吠。从枷锁中解放出来的人之心灵，将会保留对开放空间和自由的追求，直到生命的尽头。对于一个健康的大脑来说，通过理性来实现自我约束和自律是非常容易的。童年时期对自由的限制可能会产生压力，这可能会限制大脑的发育，而在以后的生活中，矛盾的是，这将使自律变得更加困难。在等式的一边，自由促进创造力，而创造力是一种同等价值的财产。你不需要成为一名雇主就能知道，一个有创造力的人自我约束要比一个纪律严明的士兵[根据需要变得有创造力](https://supermemo.guru/wiki/Creativity:_abundant_but_suppressed!)容易得多。为成年做准备需要考虑到大脑的不成熟。对于一个高智商的 30 岁的人来说，从事朝九晚五的工作可能很容易。同样的工作对一个十几岁的孩子来说可能是非常有压力的，对一个 10 岁的孩子来说可能是有害健康的，或者对一个 5 岁的孩子来说可能是一个完全的大脑破坏。我们应该庆祝这样一个事实，我们不再需要送 8 岁的孩子去工厂流水线上工作来为自己谋生。
 
 ### 18.6 Homeschooler's sleep
 
-### 家庭教育生的睡眠情况
+### 在家上学者的睡眠情况
 
 Homeschoolers often boast that what they like most about learning at home is that they can get good sleep. **The right to get good sleep should be a basic human right for children**. Some professions involve inevitable sleep deprivation or interference with chronobiology. However, adaptations to "messy sleep" lifestyle are predominantly procedural, not biological. Going to sleep early, and sticking to regular sleep hours are both procedural adaptations. The only significant biological adaptation is the possibility of determining the sleep phase via [chronotherapy](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). In the course of 2-3 weeks, an owl can be made into an early bird with the tools of chronobiology. This is again procedural adaptation that capitalizes on a single property of the sleep control system: [sleep phase](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia). This is not a biological adaptation that helps reduce the effects of sleep deprivation once it occurs.
 
-在家上学的孩子经常自豪说，他们最喜欢在家学习的原因是他们可以睡个好觉。**获得良好睡眠的权利应该是儿童的一项基本人权**。有些职业不可避免地会导致睡眠不足或生物钟紊乱。然而，适应「凌乱的睡眠」生活方式主要是程序性的，而不是天生的。早睡和坚持规律的睡眠时间都是后天规范的适应。唯一重要的生物适应是通过[时间调整](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)决定可能的睡眠阶段。在2-3周的过程中，夜猫子可以用[时间生物学](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)的方式变成一只早起的鸟。这又是一种程序化的适应，利用了睡眠控制系统的一个单一属性：[睡眠阶段](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)。但是当睡眠剥夺一旦发生，这并不是一种有助于减少压力影响的生物适应。
+在家上学的孩子经常自豪说，他们最喜欢在家学习的原因是他们可以睡个好觉。**获得良好睡眠的权利应该是儿童的一项基本人权**。有些职业不可避免地会导致睡眠不足或生物钟紊乱。然而，适应「凌乱的睡眠」生活方式主要是程序性的，而不是天生的。早睡和坚持规律的睡眠时间都是后天规范的适应。唯一重要的生物适应是通过[时间调整](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)决定可能的睡眠阶段。在 2 - 3 周的过程中，夜猫子可以用[时间生物学](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)的方式变成一只早起的鸟。这又是一种程序化的适应，利用了睡眠控制系统的一个单一属性：[睡眠阶段](http://super-memory.com/articles/sleep.htm#Curing_DSPS_and_insomnia)。但是当睡眠剥夺一旦发生，这并不是一种有助于减少压力影响的生物适应。
 
 Torturing kids with an alarm clock to train school discipline is as bad as feeding them with alcohol. Both affect brain structures and permanently change lives. The only difference is that alarm clocks are still socially acceptable.
 
@@ -190,11 +190,11 @@ Paradoxically, mixing up stress with love and shelter may be dangerous as well. 
 
 ### 18.8 Stress resilience
 
-### 压力恢复力
+### 压力适应力
 
 If optimum stress exposure implies avoiding [chronic stress](https://en.wikipedia.org/wiki/Chronic_stress) in childhood, how come some behavioral research in animals indicate that stress may improve resilience? For example, intermittent maternal separation may lead to more independent and emotionally sturdy animals? See: [Stress inoculation may improve resilience later in life](https://supermemo.guru/wiki/Stress_inoculation_may_improve_resilience_later_in_life)
 
-如果最佳的压力承受意味着避免儿童期的[慢性压力](https://en.wikipedia.org/wiki/Chronic_stress)，为什么一些动物的行为研究表明压力可以提高适应力?例如，间歇性的母亲分离可能导致更独立和情绪更坚强的动物？请参阅：[压力转移可以改善日后生活对压力的适应力](https://supermemo.guru/wiki/Stress_inoculation_may_improve_resilience_later_in_life)
+如果最佳的压力承受意味着避免儿童期的[慢性压力](https://en.wikipedia.org/wiki/Chronic_stress)，为什么一些动物的行为研究表明压力可以提高适应力？例如，间歇性的母亲分离可能导致更独立和情绪更坚强的动物？请参阅：[压力转移可以改善日后生活对压力的适应力](https://supermemo.guru/wiki/Stress_inoculation_may_improve_resilience_later_in_life)
 
 The emphasis must then again go on the "chronic" aspect of chronic stress. Some forms of stress are good. They help learning. Locke and Rousseau spoke of hardening. [Psychology literature uses terms such as inoculating or toughening](https://supermemo.guru/wiki/Chronic,_acute_and_intermittent_stress_exposure). In many circumstances stress is good for learning, development, and mental health. It can indeed lead to improved stress resilience.
 
@@ -263,7 +263,7 @@ In summary, **we should surround kids with love, shelter them from chronic stres
 
 ### 18.9 Summary: Stress resilience
 
-### 摘要：压力恢复力
+### 摘要：压力适应力
 
 * youth should be devoted to brain development
 * 青年人应该致力于大脑发展
