--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/19.childhood-passions-tong-nian-de-ji-qing.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/19.childhood-passions-tong-nian-de-ji-qing.md
@@ -121,7 +121,7 @@ How can knowledge be retained for 43 years?
 
 ### 19.6 Schooling can easily kill passions
 
-### 上学很轻易地扼杀激情
+### 学校教育很轻易地扼杀激情
 
 > Personal anecdote. [Why use anecdotes?](https://supermemo.guru/wiki/Why_use_anecdotes%3F)
 >
