--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/20.why-kids-hate-school-wei-shi-mo-hai-zi-men-tao-yan-xue-xiao.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/20.why-kids-hate-school-wei-shi-mo-hai-zi-men-tao-yan-xue-xiao.md
@@ -18,6 +18,8 @@ Psychologist [Daniel Willingham](https://en.wikipedia.org/wiki/Daniel_T._Willing
 
 ### 20.2 My own investigation
 
+### 我自己的调查
+
 Obviously, both Willingham and [Gray](https://supermemo.guru/wiki/Peter_Gray) are right. However, I decided to do a bit of research of my own. I decided to list all the most prominent school pains. Interviewing kids seemed like the best way to go. Before writing this article, in summer 2016, **I talked to some two hundred kids of all ages** \(and many more since\). This painted for me a pretty solid picture. Kids dislike or hate school almost universally. The older they are, the stronger the feeling.
 
 显然，Willingham 和 [Gray](https://supermemo.guru/wiki/Peter_Gray) 都是对的。但是，我决定对自己做一些研究。我决定列出学校引起的最突出的痛苦。和孩子面谈似乎是最好的方式。 在写这篇文章之前，在 2016 年夏天，**我与大约 200 名各个年龄段的孩子进行了交谈**（之后还有更多）。这给我画了一幅非常扎实的图景。孩子们几乎普遍不喜欢或讨厌上学。他们越大，感觉就越强烈。
