--- a/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/14.baby-management-ying-er-guan-li.md
+++ b/i-would-never-send-my-kids-to-school-wo-yong-yuan-bu-hui-song-wo-de-hai-zi-qu-xue-xiao/14.baby-management-ying-er-guan-li.md
@@ -88,7 +88,7 @@ Some kids get sent to daycare in their first months of life. This often necessit
 
 ### 14.5 Preschool drills
 
-### 幼儿训练
+### 学前训练
 
 For preschool, there is a perfect torture device: multi-seat toddler desk where kids are mounted and immobilized inside a single semi-circular desk, with high backseats that ensure face orientation towards the "teacher". This is an perfect anti-[ADHD](https://supermemo.guru/wiki/ADHD) device. Fidgeting, head movement, and own interests are considered a bad thing.
 
